BATON-144 feature: SWAP 수락 흐름 및 거래 채팅방 연결 (#101)
* BATON-144 feature: SWAP 수락 흐름 및 거래 채팅방 연결

* BATON-144 fix: SWAP 거래 매핑 및 상태 전이 보완, 코드 리뷰 반영

* BATON-144 fix: 완료된 교환 거래 재제안 차단 문제 수정

* BATON-144 fix: SWAP 크레딧 락 획득 순서 고정